[gd_scene load_steps=2 format=3 uid="uid://b3yiadtxwukar"]

[ext_resource type="Script" path="res://test/test.gd" id="1_38302"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_38302")

[node name="P" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1036.0
offset_top = 8.0
offset_right = 1124.0
offset_bottom = 39.0
text = "SAVE"

[node name="ReloadButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1040.0
offset_top = 47.0
offset_right = 1122.0
offset_bottom = 81.0
text = "RELOAD"

[node name="RunButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1041.0
offset_top = 93.0
offset_right = 1123.0
offset_bottom = 128.0
text = "RUN"

[node name="Nodes" type="ItemList" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1002.0
offset_top = 145.0
offset_right = 1134.0
offset_bottom = 438.0

[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="RunButton" to="." method="_on_run_button_pressed"]
[connection signal="item_activated" from="Nodes" to="." method="_on_nodes_item_activated"]
